--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-  max-height: 5rem;
+  flex-wrap: wrap;
+  max-height: 100vh;
   max-width: 100%;
   display: flex;
   justify-content: space-between;
@@ -33,6 +34,9 @@
 .navbar-right {
   display: flex;
   align-items: center;
+  justify-content: end;
+  gap: 4.85rem;
+ 
 }
 .navbar-right .cart-icon,
 .navbar-right .user-icon {
@@ -60,6 +64,10 @@
 ul {
   display: flex;
   flex-direction: row;
-  gap: 3rem;
-  padding-right: 3rem;
+  gap: 1.3rem;
+  position: relative;
+}
+Nav {
+  flex-wrap: wrap;
+  position: relative;
 }
